increased max-width of banner and window to fix small text wrap issue

--- a/css/login.css
+++ b/css/login.css
@@ -62,7 +62,7 @@ td, th { vertical-align: top; padding: .5em; }
 body { background: #d2d2d2; font-family: "Lucida Grande", verdana, arial, helvetica, sans-serif; }
 h3 { margin: 0 0 10px 0; }
 p { margin: 0 0 10px 0; font-size: 12px; line-height: 19px; }
-.banner { width: 100%; max-width: 650px; margin: 0 auto; }
+.banner { width: 100%; max-width: 670px; margin: 0 auto; }
 .banner_logo { float: none; display: block; margin: 0 0 30px 0; text-align: center; }
 .banner_logo img { background: #fff; padding: 10px; -webkit-box-shadow: 0px 1px 2px 0px #666; -moz-box-shadow: 0px 1px 2px 0px #666; box-shadow: 0px 1px 2px 0px #666; 
 -webkit-border-radius: 0 0 5px 5px; -moz-border-radius: 0 0 5px 5px; border-radius: 0 0 5px 5px; 
@@ -70,7 +70,7 @@ p { margin: 0 0 10px 0; font-size: 12px; line-height: 19px; }
 
 .window { background: none; border: none; }
 .window_body_wrap { padding: 0; }
-.window_body { background: #c4c4c4; width: 97%; max-width: 650px; margin: 0 auto; padding: 1em 1.5%; border-radius: 5px; 
+.window_body { background: #c4c4c4; width: 97%; max-width: 670px; margin: 0 auto; padding: 1em 1.5%; border-radius: 5px; 
 -webkit-box-shadow: 0px 1px 2px 0px #666; -moz-box-shadow: 0px 1px 2px 0px #666; box-shadow: 0px 1px 2px 0px #666; }
 .window_body img { max-width: 100%; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; 
 -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; }
